# sandbox-agent

./: .dockerignore  .gitignore  .turbo  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  dist  justfile  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  research.md  spec.md  target  todo.md  turbo.json
.claude/commands/: post-release-testing.md  release.md
.github/workflows/: ci.yaml  claude.yml  release.yaml  skill-generator.yml
docker/release/: build.sh  linux-aarch64.Dockerfile  linux-x86_64.Dockerfile  macos-aarch64.Dockerfile  macos-x86_64.Dockerfile  windows.Dockerfile
docker/runtime/: Dockerfile
docs/: agent-compatibility.mdx  agent-sessions.mdx  agent-teams.mdx  architecture.mdx  attachments.mdx  building-chat-ui.mdx  cli.mdx  conversion.md  conversion.mdx  cors.mdx  credentials.mdx  custom-tools.mdx  daemon.mdx  docs.json  file-system.mdx  gigacode.mdx  glossary.md  http-api.mdx  inspector.mdx  manage-sessions.mdx  mcp-config.mdx  mcp.mdx  multiplayer.mdx  observability.mdx  openapi.json  opencode-compatibility.mdx  pi-support-plan.md  process-terminal.md  quickstart.mdx  sdk-overview.mdx  security.mdx  session-persistence.mdx  session-restoration.mdx  session-transcript-schema.mdx  skills-config.mdx  skills.mdx  telemetry.mdx  theme.css  universal-schema.mdx
docs/advanced/: acp-http-client.mdx
docs/ai/: llms-txt.mdx  skill.mdx
docs/deploy/: cloudflare.mdx  computesdk.mdx  daytona.mdx  docker-sandbox.mdx  docker.mdx  e2b.mdx  index.mdx  local.mdx  netlify.mdx  vercel.mdx
docs/sdks/: python.mdx  typescript.mdx
examples/: CLAUDE.md  package.json  tsconfig.json  vitest.config.ts
examples/cloudflare/: Dockerfile  README.md  package.json  tsconfig.json  wrangler.jsonc
examples/computesdk/: package.json
examples/custom-tools-mcp/: package.json
examples/custom-tools-skill/: SKILL.md  package.json
examples/daytona/: daytona.test.ts  daytona.ts
examples/docker/: docker.test.ts  docker.ts
examples/docker-sandbox/: Dockerfile  README.md  package.json
examples/e2b/: e2b.test.ts  e2b.ts
examples/file-system/: package.json
examples/mcp/: package.json
examples/mock-acp-agent/: README.md  package.json  tsconfig.build.json  tsconfig.json
frontend/: CLAUDE.md
gigacode/: Cargo.toml  README.md
gigacode/src/: main.rs
research/: detect-sandbox.md  docker-sandbox.md  opencode-tmux-test.md  opencode-web-customization.md  process-terminal-design.md  ui-library-proposal.md  wip-agent-support.md
server/: ARCHITECTURE.md  CLAUDE.md
spec/: universal-schema.json  universal-schema.md
website/: astro.config.mjs  package.json  tailwind.config.mjs
(+229 files in other folders)
